# server/src/main/kotlin/fi/vauhtijuoksu/vauhtijuoksuapi/server/impl/gamedata/NewGameDataApiModel.kt
@@ -1,45 +1,0 @@
-package fi.vauhtijuoksu.vauhtijuoksuapi.server.impl.gamedata
-
-import com.fasterxml.jackson.annotation.JsonFormat
-import com.fasterxml.jackson.annotation.JsonInclude
-import com.fasterxml.jackson.annotation.JsonProperty
-import fi.vauhtijuoksu.vauhtijuoksuapi.models.GameData
-import fi.vauhtijuoksu.vauhtijuoksuapi.models.GameParticipant
-import java.util.Date
-import java.util.UUID
-
-data class NewGameDataApiModel(
-    val game: String,
-    @JsonProperty("start_time")
-    @JsonFormat(shape = JsonFormat.Shape.STRING)
-    val startTime: Date,
-    @JsonProperty("end_time")
-    @JsonFormat(shape = JsonFormat.Shape.STRING)
-    val endTime: Date,
-    val category: String,
-    val device: String,
-    val published: String,
-    @JsonProperty("vod_link")
-    @JsonInclude(JsonInclude.Include.NON_NULL)
-    val vodLink: String?,
-    @JsonProperty("img_filename")
-    val imgFilename: String?,
-    val meta: String?,
-    val participants: List<GameParticipantApiModel> = listOf(),
-) {
-    fun toGameData(id: UUID): GameData {
-        return GameData(
-            id,
-            game,
-            startTime,
-            endTime,
-            category,
-            device,
-            published,
-            vodLink,
-            imgFilename,
-            meta,
-            participants.map { GameParticipant(it.participant_id, it.role) },
-        )
-    }
-}
